# Evaluate_Your_English

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
evaluate/: __init__.py  grammar.py  pronunciation.py  readability.py
tests/: test_pronunciation_and_grammar.py  test_readability.py
